# freehoro_bot

./: .gitignore  README.md  docker-compose.yaml
app/: Dockerfile  conf.py  main.py  pyproject.toml
app/api/: chat_routes.py  message_routes.py  utils.py  websocket_routes.py
app/schemas/: chat.py  message.py
app/stream/: __init__.py  core.py  models.py
gui/: Dockerfile  app.py  req.txt
gui/auth/: __init__.py  utils.py  views.py
gui/static/css/: style.css
gui/static/js/: api.js  main.js  ui.js  websocket.js
gui/templates/: dashboard.html  login.html
shared/: pyproject.toml
shared/shared/storage/: database.py
shared/shared/storage/mixins/: __init__.py  chat.py  user.py
shared/shared/storage/models/: __init__.py  chat.py  message.py  user.py
shared/shared/utils/: __init__.py  dt.py
shared/tests/: conftest.py  test_chat_db.py  test_user_db.py
telegram_bot/: Dockerfile  conf.py  main.py  pyproject.toml  utils.py
telegram_bot/provider/: __init__.py  core.py
telegram_bot/telegram/: constants.py  handlers.py  keyboards.py  middlewares.py  sending_pushes.py
