[tool.poetry]
name = "app"
version = "0.1.1"
description = "API aplication"
authors = ["NonDoctor <tsucintosh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
fastapi = "^0.115.6"
loguru = "^0.7.3"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
websockets = "^14.1"
shared = { path="../shared"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
