[tool.poetry]
name = "shared"
version = "0.2.1"
description = ""
authors = ["NonDoctor <tsucintosh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.6.0"
pydantic = ">=2.4.1,<2.10"
loguru = "^0.7.3"
pytz = "^2024.2"


[tool.poetry.group.pytest.dependencies]
anyio = "^4.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mongomock-motor = "^0.0.34"
trio = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
