[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["NonDoctor <tsucintosh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
shared = { path="../shared" }
aiogram = "^3.15.0"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
aiogram-media-cache = {git = "https://github.com/NonDoctor/aiogram-media-cache.git"}
apscheduler = "^3.11.0"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
